# terminal-chat-rs

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: input.rs  main.rs  networking.rs
client/src/ui/: app.rs  comms.rs  mod.rs  screens.rs
housechat-lib/: Cargo.toml
housechat-lib/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: client_model.rs  lib.rs  protocol.rs
