[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
local-ip-address = "0.6.5"
log = "0.4.28"
ratatui = "0.29.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
