[workspace]
resolver = "3"
members = [
    "client",
    "server",
    "housechat-lib",
]

[workspace.dependencies]
local-ip-address = "0.6.5"
log = "0.4.28"
ratatui = { version = "0.29.0", features = ["crossterm"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
time = { version = "0.3.44", features = ["macros", "formatting"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }