[package]
name = "housechat"
version = "0.1.0"
edition = "2024"

[dependencies]
local-ip-address = { workspace = true }
log = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simplelog = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
