[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
housechat = {path = "../housechat-lib"}

local-ip-address = { workspace = true }
log = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
